# tasktick

./: .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt
accounts/: forms.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
activities/: api.py  models.py  schemas.py
activities/migrations/: 0001_initial.py  0002_activity_project.py
pages/: urls.py  views.py
projects/: api.py  models.py  schemas.py
projects/migrations/: 0001_initial.py
static/css/: system.css
tasktick/: api.py  asgi.py  settings.py  urls.py  wsgi.py
templates/: _base.html  home.html
templates/pages/: home.html
templates/registration/: login.html  logout.html  signup.html
